volexc/tests/ui/check_duplicate_union_index.out
Error: duplicate index 1 in union `Foo`
   ╭─[check_duplicate_union_index.vol:3:16]
   │
 3 │     Bar(u32) = 1
   │                ┬  
   │                ╰── first used here
 4 │     Baz(u64) = 1
   │                ┬  
   │                ╰── reused here
───╯