volexc/tests/ui/check_duplicate_union_index.vol
// Duplicate variant index in union
union Foo {
    Bar(u32) = 1
    Baz(u64) = 1
}
